Added support for decimal and sqrt

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <div class="container">
       <div class="calculator">
         <div class="screen">
-          <div id="expr">1234567890+-÷✕^!</div>
+          <div id="expr">1234567890+-÷✕^!√</div>
           <div id="ans">0</div>
         </div>
         <div class="buttons">
+          <button id="sin">sin</button>
+          <button id="cos">cos</button>
+          <button id="tan">tan</button>
+          <button id="sqrt">√</button>
           <button id="clear">C</button>
           <button id="exponent">^</button>
           <button id="sign">+</button>
