--- a/index.html
+++ b/index.html
@@ -1,47 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expression Parser</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <div class="calculator">
-        <div class="screen">
-          <div id="expr">1234567890+-÷✕^!√</div>
-          <div id="ans">0</div>
-        </div>
-        <div class="buttons">
-          <button id="sin">sin</button>
-          <button id="cos">cos</button>
-          <button id="tan">tan</button>
-          <button id="sqrt">√</button>
-          <button id="clear">C</button>
-          <button id="exponent">^</button>
-          <button id="sign">+</button>
-          <button id="divide">/</button>
-          <button id="num-7">7</button>
-          <button id="num-8">8</button>
-          <button id="num-9">9</button>
-          <button id="multiply">X</button>
-          <button id="num-4">4</button>
-          <button id="num-5">5</button>
-          <button id="num-6">6</button>
-          <button id="subtract">-</button>
-          <button id="num-1">1</button>
-          <button id="num-2">2</button>
-          <button id="num-3">3</button>
-          <button id="add">+</button>
-          <button id="dot">.</button>
-          <button id="num-0">0</button>
-          <button id="answer">ANS</button>
-          <button id="equals">=</button>
-        </div>
-      </div>
-    </div>
-    <script src="parser.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <script src="parser.js"></script>
+</body>
 </html>
