Refactored and separated parsing and evaluating

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="parser.js"></script>
+  <script type="text/javascript" src="parser.js"></script>
+  <script type="text/javascript" src="evaluate.js"></script>
 </body>
 </html>
